[package]
name = "yew-video-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2.80"
wasm-bindge-futures = "0.4.30"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "Navigator",
  "MediaDevices",
  "MediaStream",
  "HtmlVideoElement",
  "MediaStreamConstraints",
  "VideoTrack"
]
